<resources>
    <string name="app_name">Marvelverse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fantastic_four_description">Fantistic Four by Dann Slot Vol. 1 (2021)</string>
    <string name="home_card_image">home card image</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="series_cover">series cover</string>
    <string name="character_cover">character cover</string>
    <string name="error_icon">error icon</string>
    <string name="description">Description</string>
    <string name="characters">Characters</string>
    <string name="comics">Comics</string>
    <string name="events">Events</string>
    <string name="empty_list">Your Search List is Empty</string>
    <string name="descriptionSearch">Explore Movies and add them \n to Search to show them here.</string>
    <string name="series">Series</string>
    <string name="descrition_all">descritionAll</string>
    <string name="seriesCharacter">Series</string>
    <string name="marvel">Marvel</string>
</resources>