<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.example.marvelverse.domain.entities.Character" />

        <variable
            name="viewModel"
            type="com.example.marvelverse.app.ui.characters.details.DetailsCharacterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/charcter_image"
                android:layout_width="match_parent"
                android:layout_height="224dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:scaleType="centerCrop"
                app:roundPercent="0.1"
                app:thumbnail="@{item.imageUrl}"
                tools:src="@drawable/spider" />

            <TextView
                android:id="@+id/character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@{item.name}"
                android:textColor="@color/main_title"
                android:textSize="16sp"
                tools:text="SpiderMan" />

            <TextView
                android:id="@+id/character_description"
                visibilityIfNotBlank="@{item.description}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/description"
                android:textColor="@color/main_title"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/character_description_text"
                visibilityIfNotBlank="@{item.description}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_regular"
                android:text="@{item.description}"
                android:textSize="14sp"
                android:textColor="@color/body_text"
                tools:ignore="TextContrastCheck"
                tools:text="Norem ipsum dolor sit amet" />

            <TextView
                android:id="@+id/character_comics"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/comics"
                android:textSize="16sp"
                app:showWhenSuccess="@{viewModel.comics}" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_characters_comics"
                app:showWhenSuccess="@{viewModel.comics}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                app:items="@{viewModel.comics}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_home_card" />

            <TextView
                android:id="@+id/character_series"
                app:showWhenSuccess="@{viewModel.series}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/seriesCharacter"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_characters_series"
                app:showWhenSuccess="@{viewModel.series}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                app:items="@{viewModel.series}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_home_card" />


            <TextView
                android:id="@+id/character_events"
                app:showWhenSuccess="@{viewModel.events}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/events"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_characters_events"
                app:showWhenSuccess="@{viewModel.events}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                app:items="@{viewModel.events}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_home_card" />
        </LinearLayout>
    </ScrollView>
</layout>